@@ -18,7 +18,7 @@ outputs form a stack. Like so:
 Note for the last you have two inputs, they also have to be applied in
 reverse order.
 
-**********
+********** DONE
 Martijn van Oosterhout suggested that the command line is too long.
 
 I think the lengthof the commandline is also an obsticle. Perhaps you
@@ -29,6 +29,9 @@ apply-change'
 
 A bit confusing with the multiple input pipes, but it's clearer if you
 know shell...
+
+BH: I've added shortened task names and default arguments which have alleviated
+the worst of the verbosity.
 
 ********** DONE
 Application output is not configurable.  This needs to be made configurable
@@ -115,7 +118,7 @@ Fix tag ';' character escaping.
 Feature request from Frederik Ramm.
 Add support to pass dates through the pipeline unparsed.
 
-**********
+********** DONE
 Feature request from Frederik Ramm.
 Make osmosis return error codes if it fails to make it better suited to scripting.
 
